--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -42,50 +42,99 @@
         </div>
       </div>
     </div>
+
     <script>
       const BASE_URL = "http://localhost:5000/api";
+
+      // Ambil token dari localStorage
+      const token = localStorage.getItem("token");
+      if (!token) {
+        alert("Anda belum login, silakan login dulu.");
+        window.location.href = "login.html";
+      }
+
+      // Fungsi decode JWT untuk dapatkan user info
+      function parseJwt(token) {
+        try {
+          const base64Url = token.split(".")[1];
+          const base64 = base64Url.replace(/-/g, "+").replace(/_/g, "/");
+          const jsonPayload = decodeURIComponent(
+            atob(base64)
+              .split("")
+              .map((c) => "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2))
+              .join("")
+          );
+          return JSON.parse(jsonPayload);
+        } catch {
+          return null;
+        }
+      }
+
+      const decoded = parseJwt(token);
+      if (!decoded) {
+        alert("Token tidak valid, silakan login ulang.");
+        localStorage.removeItem("token");
+        window.location.href = "login.html";
+      }
+
+      // Set nama dan inisial avatar di navbar sesuai user login
+      const userName = decoded.name || "User";
+      document.querySelector(".profile-name").textContent = userName;
+
+      function getInitials(name) {
+        return name
+          .split(" ")
+          .map((n) => n[0])
+          .join("")
+          .toUpperCase()
+          .slice(0, 2);
+      }
+
+      document.querySelector(".profile-avatar").textContent =
+        getInitials(userName);
+
+      // Fetch summary (tetap pakai userId=1 seperti kode awal)
       async function fetchSummary() {
-        const userId = 1; // Bisa diganti dari session/login
-        const res = await fetch(
-          `${BASE_URL}/dashboard-summary?user_id=${userId}`
-        );
+        // Tidak perlu kirim user_id, agar backend hitung semua data global
+        const res = await fetch(`${BASE_URL}/dashboard-summary`);
         const data = await res.json();
+
         if (!res.ok) {
           document.getElementById("summaryContainer").innerText =
             "Gagal mengambil data.";
           return;
         }
-        // Card list sesuai dashboard
+
         const html = `
-        <div class="card income">
-          <div class="card-label">Pendapatan (Hari Ini)</div>
-          <div class="card-value">Rp ${data.incomeToday.toLocaleString()}</div>
-        </div>
-        <div class="card income">
-          <div class="card-label">Total Pendapatan</div>
-          <div class="card-value">Rp ${data.totalIncome.toLocaleString()}</div>
-        </div>
-        <div class="card expense">
-          <div class="card-label">Pengeluaran (Hari Ini)</div>
-          <div class="card-value">Rp ${data.expenseToday.toLocaleString()}</div>
-        </div>
-        <div class="card expense">
-          <div class="card-label">Total Pengeluaran</div>
-          <div class="card-value">Rp ${data.totalExpense.toLocaleString()}</div>
-        </div>
-        <div class="card balance">
-          <div class="card-label">Sisa Uang</div>
-          <div class="card-value">Rp ${data.saldo.toLocaleString()}</div>
-        </div>
-        <div class="card products">
-          <div class="card-label">Total Produk</div>
-          <div class="card-value">${data.totalProducts}</div>
-        </div>
-        <div class="card employees">
-          <div class="card-label">Karyawan</div>
-          <div class="card-value">${data.totalEmployees}</div>
-        </div>
-      `;
+    <div class="card income">
+      <div class="card-label">Pendapatan (Hari Ini)</div>
+      <div class="card-value">Rp ${data.incomeToday.toLocaleString()}</div>
+    </div>
+    <div class="card income">
+      <div class="card-label">Total Pendapatan</div>
+      <div class="card-value">Rp ${data.totalIncome.toLocaleString()}</div>
+    </div>
+    <div class="card expense">
+      <div class="card-label">Pengeluaran (Hari Ini)</div>
+      <div class="card-value">Rp ${data.expenseToday.toLocaleString()}</div>
+    </div>
+    <div class="card expense">
+      <div class="card-label">Total Pengeluaran</div>
+      <div class="card-value">Rp ${data.totalExpense.toLocaleString()}</div>
+    </div>
+    <div class="card balance">
+      <div class="card-label">Sisa Uang</div>
+      <div class="card-value">Rp ${data.saldo.toLocaleString()}</div>
+    </div>
+    <div class="card products">
+      <div class="card-label">Total Produk</div>
+      <div class="card-value">${data.totalProducts}</div>
+    </div>
+    <div class="card employees">
+      <div class="card-label">Karyawan</div>
+      <div class="card-value">${data.totalEmployees}</div>
+    </div>
+  `;
         document.getElementById("summaryContainer").innerHTML = html;
       }
 
@@ -113,6 +162,7 @@
         // Logout
         document.getElementById("logoutBtn").onclick = function (e) {
           e.preventDefault();
+          localStorage.removeItem("token");
           window.location.href = "login.html";
         };
       });
