--- a/frontend/login.html
+++ b/frontend/login.html
@@ -17,7 +17,7 @@
     <p>Belum punya akun? <a href="register.html">Register di sini</a></p>
 
     <script>
-      const BASE_URL = "http://localhost:5000";
+      const BASE_URL = "http://localhost:5000/api";
 
       document.getElementById("loginForm").onsubmit = async function (e) {
         e.preventDefault();
