--- a/frontend/pemasukan.html
+++ b/frontend/pemasukan.html
@@ -54,6 +54,7 @@
         </ul>
       </div>
       <div class="content">
+        <!-- Navbar -->
         <div class="navbar">
           <div class="profile-dropdown" id="profileDropdown">
             <div class="profile-avatar">AD</div>
@@ -68,6 +69,7 @@
           </div>
         </div>
 
+        <!-- Form Pemasukan -->
         <div class="container">
           <h2>Pencatatan Pemasukan</h2>
           <form id="incomeForm">
@@ -114,9 +116,57 @@
     <script>
       const BASE_URL = "http://localhost:5000/api";
 
-      // Render data pemasukan ke tabel
+      // Ambil token dari localStorage
+      const token = localStorage.getItem("token");
+      if (!token) {
+        alert("Anda belum login, silakan login dulu.");
+        window.location.href = "login.html";
+      }
+
+      // Decode JWT untuk dapatkan data user
+      function parseJwt(token) {
+        try {
+          const base64Url = token.split(".")[1];
+          const base64 = base64Url.replace(/-/g, "+").replace(/_/g, "/");
+          const jsonPayload = decodeURIComponent(
+            atob(base64)
+              .split("")
+              .map((c) => "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2))
+              .join("")
+          );
+          return JSON.parse(jsonPayload);
+        } catch {
+          return null;
+        }
+      }
+
+      const decoded = parseJwt(token);
+      if (!decoded) {
+        alert("Token tidak valid, silakan login ulang.");
+        localStorage.removeItem("token");
+        window.location.href = "login.html";
+      }
+
+      // Set nama user dan inisial avatar di navbar
+      const userName = decoded.name || "User";
+      document.querySelector(".profile-name").textContent = userName;
+      function getInitials(name) {
+        return name
+          .split(" ")
+          .map((n) => n[0])
+          .join("")
+          .toUpperCase()
+          .slice(0, 2);
+      }
+      document.querySelector(".profile-avatar").textContent =
+        getInitials(userName);
+
+      // Set user_id di form sesuai id login
+      document.getElementById("user_id").value = decoded.id;
+
+      // Fungsi fetch pemasukan user sesuai user_id form
       async function fetchIncomes() {
-        const userId = document.getElementById("user_id").value || 1;
+        const userId = document.getElementById("user_id").value || decoded.id;
         const res = await fetch(`${BASE_URL}/income?user_id=${userId}`);
         const data = await res.json();
         const tbody = document.getElementById("incomeTableBody");
@@ -138,7 +188,7 @@
         attachActionButtons();
       }
 
-      // Pasang event handler tombol edit & delete
+      // Event tombol edit dan delete
       function attachActionButtons() {
         document.querySelectorAll(".btn-edit").forEach((btn) => {
           btn.onclick = async () => {
@@ -181,7 +231,7 @@
         });
       }
 
-      // Clear form input setelah tambah/update/hapus
+      // Clear form
       function clearForm() {
         document.getElementById("incomeId").value = "";
         document.getElementById("sumber").value = "";
@@ -189,7 +239,7 @@
         document.getElementById("jumlah").value = "";
       }
 
-      // Submit form tambah atau update
+      // Submit tambah/update pemasukan
       document.getElementById("incomeForm").onsubmit = async function (e) {
         e.preventDefault();
         const id = document.getElementById("incomeId").value;
@@ -203,14 +253,12 @@
         try {
           let res;
           if (id) {
-            // Update
             res = await fetch(`${BASE_URL}/income/${id}`, {
               method: "PUT",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({ sumber, tanggal, jumlah }),
             });
           } else {
-            // Create
             res = await fetch(`${BASE_URL}/income`, {
               method: "POST",
               headers: { "Content-Type": "application/json" },
@@ -235,17 +283,21 @@
         }
       };
 
+      // User ID input di form gak perlu diubah user, jadi bisa disable atau hidden jika ingin:
+      // document.getElementById("user_id").disabled = true;
+
+      // Jika user_id berubah, reload daftar pemasukan (opsional)
       document.getElementById("user_id").addEventListener("input", () => {
         clearForm();
         fetchIncomes();
       });
 
+      // Load awal halaman
       document.addEventListener("DOMContentLoaded", () => {
-        document.getElementById("user_id").value = 1;
         fetchIncomes();
       });
 
-      // Dropdown Profile & Logout
+      // Dropdown navbar profile
       document.addEventListener("DOMContentLoaded", () => {
         const dropdown = document.querySelector(".navbar .profile-dropdown");
 
@@ -270,6 +322,7 @@
         if (logoutBtn) {
           logoutBtn.onclick = function (e) {
             e.preventDefault();
+            localStorage.removeItem("token");
             window.location.href = "login.html";
           };
         }
